--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!--  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <title>Rayan Mishra</title>
@@ -34,8 +43,25 @@
     </header>
 
     <main>
-      <section class="wrapper">
-        <!-- <h1>Rayan Mishra</h1> -->
+      <!-- hero section -->
+      <section class="wrapper grid hero__grid">
+        <div class="hero__textContainer">
+          <h1>Hello, I'm Rayan</h1>
+          <p>Front End</p>
+          <p>Web Developer</p>
+        </div>
+        <div class="hero__imgContainer">
+          <img src="/assets/profile.png" alt="profil picture" />
+        </div>
+      </section>
+      <!-- <hr /> -->
+
+      <!-- About me -->
+      <section class="wrapper grid about__grid">
+        <div class="title">
+          <div class="title--style"></div>
+          <h3>About</h3>
+        </div>
       </section>
     </main>
   </body>
