--- a/index.html
+++ b/index.html
@@ -20,8 +20,29 @@
       href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+    <!--  -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/d86d91a25d.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>Rayan Mishra</title>
   </head>
+
+  <!-- BODY -->
   <body>
     <!-- NAV MENU Section -->
     <header>
@@ -57,10 +78,55 @@
       <!-- <hr /> -->
 
       <!-- About me -->
-      <section class="wrapper grid about__grid">
+      <section class="wrapper">
         <div class="title">
           <div class="title--style"></div>
           <h3>About</h3>
+        </div>
+        <div class="grid about__grid">
+          <div class="about__skill">
+            <h4>Skills</h4>
+            <ul class="skill__list">
+              <li><i class="devicon-html5-plain"></i></li>
+              <li><i class="devicon-css3-plain"></i></li>
+              <li><i class="devicon-sass-original"></i></li>
+              <li><i class="devicon-javascript-plain"></i></li>
+              <li><i class="devicon-jquery-plain"></i></li>
+              <li><i class="devicon-react-original"></i></li>
+              <li><i class="devicon-git-plain"></i></li>
+              <li><i class="devicon-github-original"></i></li>
+              <li><i class="devicon-firebase-plain"></i></li>
+              <li>
+                <i
+                  class="fa-solid fa-universal-access"
+                  style="color: #212121"
+                ></i>
+              </li>
+              <li><i class="devicon-figma-plain"></i></li>
+              <li><i class="devicon-maya-plain"></i></li>
+            </ul>
+          </div>
+          <div class="about__des">
+            <p>
+              Hi there ! I am Rayan and thanks for stopping by. I am a dedicated
+              Front End developer with a passion for crafting clean and
+              accessible web applications. Leveraging my previous background in
+              design and project management, I am committed to producing robust
+              and elegant code that effectively translates complex business
+              concepts into tangible and achievable objectives.
+            </p>
+            <br />
+
+            <p>
+              Throughout my professional journey, I have consistently
+              demonstrated leadership qualities, successfully managing teams,
+              overseeing long-term projects, and delivering established
+              deadlines. My work ethic is characterized by hard work,
+              reliability, creativity and a love for problem-solving. I pride
+              myself on making a positive impact on the individuals with whom I
+              collaborate and interact.
+            </p>
+          </div>
         </div>
       </section>
     </main>
