added a project section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
           <h1>Hello, I'm Rayan</h1>
           <p>Front End</p>
           <p>Web Developer</p>
+          <p class="hero__tag">
+            I strive to produce robust and scalable code that translates complex
+            business goals into feasible and measurable objectives.
+          </p>
         </div>
         <div class="hero__imgContainer">
           <img src="/assets/profile.png" alt="profil picture" />
@@ -85,7 +89,7 @@
         </div>
         <div class="grid about__grid">
           <div class="about__skill">
-            <h4>Skills</h4>
+            <h4>Toolkit</h4>
             <ul class="skill__list">
               <li><i class="devicon-html5-plain"></i></li>
               <li><i class="devicon-css3-plain"></i></li>
@@ -125,6 +129,93 @@
               reliability, creativity and a love for problem-solving. I pride
               myself on making a positive impact on the individuals with whom I
               collaborate and interact.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Project -->
+
+      <section class="wrapper">
+        <div class="title">
+          <div class="title--style"></div>
+          <h3>Projects</h3>
+        </div>
+        <h4 class="project--header">Selected Projects</h4>
+        <div class="grid project__grid">
+          <!-- 1st -->
+          <div class="project__imageContainer">
+            <img
+              src="./assets/project/organic.png"
+              alt="screenshot of the organic homepage"
+            />
+          </div>
+          <div class="project__text">
+            <h5>Organic</h5>
+
+            <ul class="tool--list">
+              <li>HTML</li>
+              <li>SASS</li>
+              <li>Firebase</li>
+              <li>JavaScript</li>
+            </ul>
+
+            <p>
+              Organic is a multi-page e-commerce site with a fully functional
+              shopping cart connected to a real-time database, advanced product
+              search and filter, scroll effects using Intersection Observation
+              API, image carousel gallery, and is fully responsive down to
+              320px.
+            </p>
+          </div>
+          <!-- 2nd -->
+          <div class="project__text">
+            <h5>Organic</h5>
+
+            <ul class="tool--list">
+              <li>HTML</li>
+              <li>SASS</li>
+              <li>Firebase</li>
+              <li>JavaScript</li>
+            </ul>
+
+            <p>
+              Organic is a multi-page e-commerce site with a fully functional
+              shopping cart connected to a real-time database, advanced product
+              search and filter, scroll effects using Intersection Observation
+              API, image carousel gallery, and is fully responsive down to
+              320px.
+            </p>
+          </div>
+          <div class="project__imageContainer">
+            <img
+              src="./assets/project/organic.png"
+              alt="screenshot of the organic homepage"
+            />
+          </div>
+          <!-- 3rd -->
+          <div class="project__imageContainer">
+            <img
+              src="./assets/project/organic.png"
+              alt="screenshot of the organic homepage"
+            />
+          </div>
+          <div class="project__text">
+            <h5>Organic</h5>
+
+            <ul class="tool--list">
+              <li>HTML</li>
+              <li>SASS</li>
+              <li>Firebase</li>
+              <li>JavaScript</li>
+            </ul>
+
+            <p>
+              Organic is a multi-page e-commerce site with a fully functional
+              shopping cart connected to a real-time database, advanced product
+              search and filter, scroll effects using Intersection Observation
+              API, image carousel gallery, and is fully responsive down to
+              320px.
             </p>
           </div>
         </div>
