--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
     <!--  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
 
@@ -101,10 +101,7 @@
               <li><i class="devicon-github-original"></i></li>
               <li><i class="devicon-firebase-plain"></i></li>
               <li>
-                <i
-                  class="fa-solid fa-universal-access"
-                  style="color: #212121"
-                ></i>
+                <i class="fa-solid fa-universal-access"></i>
               </li>
               <li><i class="devicon-figma-plain"></i></li>
               <li><i class="devicon-maya-plain"></i></li>
@@ -112,23 +109,21 @@
           </div>
           <div class="about__des">
             <p>
-              Hi there ! I am Rayan and thanks for stopping by. I am a dedicated
-              Front End developer with a passion for crafting clean and
-              accessible web applications. Leveraging my previous background in
-              design and project management, I am committed to producing robust
-              and elegant code that effectively translates complex business
-              concepts into tangible and achievable objectives.
+              Hi I’m Rayan, thank you for stopping by! I am a dedicated
+              front-end developer with a passion for crafting clean and
+              accessible web applications. I have a multi-disciplinary approach
+              to work. Leveraging my previous background in design and project
+              management, I am committed to producing robust and elegant code
+              that effectively translates complex business concepts into
+              tangible and achievable objectives.
             </p>
             <br />
 
             <p>
-              Throughout my professional journey, I have consistently
-              demonstrated leadership qualities, successfully managing teams,
-              overseeing long-term projects, and delivering established
-              deadlines. My work ethic is characterized by hard work,
-              reliability, creativity and a love for problem-solving. I pride
-              myself on making a positive impact on the individuals with whom I
-              collaborate and interact.
+              Currently I am actively seeking front-end application development
+              opportunities in environments where I can code the most innovative
+              ideas by bringing my treasure trove of experience, expertise, and
+              dedication to the table.
             </p>
           </div>
         </div>
@@ -164,9 +159,11 @@
               Organic is a multi-page e-commerce site with a fully functional
               shopping cart connected to a real-time database, advanced product
               search and filter, scroll effects using Intersection Observation
-              API, image carousel gallery, and is fully responsive down to
-              320px.
+              API, image carousel gallery and is fully responsive down to 320px.
             </p>
+
+            <a href="">Live Site</a>
+            <a href="">View Code</a>
           </div>
           <!-- 2nd -->
           <div class="project__text">
@@ -183,9 +180,11 @@
               Organic is a multi-page e-commerce site with a fully functional
               shopping cart connected to a real-time database, advanced product
               search and filter, scroll effects using Intersection Observation
-              API, image carousel gallery, and is fully responsive down to
-              320px.
+              API, image carousel gallery and is fully responsive down to 320px.
             </p>
+
+            <a href="">Live Site</a>
+            <a href="">View Code</a>
           </div>
           <div class="project__imageContainer">
             <img
@@ -214,9 +213,98 @@
               Organic is a multi-page e-commerce site with a fully functional
               shopping cart connected to a real-time database, advanced product
               search and filter, scroll effects using Intersection Observation
-              API, image carousel gallery, and is fully responsive down to
-              320px.
+              API, image carousel gallery and is fully responsive down to 320px.
             </p>
+            <a href="">Live Site</a>
+            <a href="">View Code</a>
+          </div>
+          <!-- 4th -->
+          <div class="project__text">
+            <h5>Organic</h5>
+
+            <ul class="tool--list">
+              <li>HTML</li>
+              <li>SASS</li>
+              <li>Firebase</li>
+              <li>JavaScript</li>
+            </ul>
+
+            <p>
+              Organic is a multi-page e-commerce site with a fully functional
+              shopping cart connected to a real-time database, advanced product
+              search and filter, scroll effects using Intersection Observation
+              API, image carousel gallery and is fully responsive down to 320px.
+            </p>
+            <a href="">Live Site</a>
+            <a href="">View Code</a>
+          </div>
+          <div class="project__imageContainer">
+            <img
+              src="./assets/project/organic.png"
+              alt="screenshot of the organic homepage"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact me -->
+      <section class="wrapper">
+        <div class="title">
+          <div class="title--style"></div>
+          <h3>Get in touch</h3>
+        </div>
+        <div class="grid contact__grid">
+          <div class="contact__text">
+            <p class="contact--header">Email</p>
+            <p class="contact--info">rayanmishra7@gmail.com</p>
+            <p class="contact--header">Find me on</p>
+            <ul class="contact__socials">
+              <li>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+              </li>
+            </ul>
+          </div>
+          <div class="contact_form">
+            <form>
+              <div class="formRow">
+                <label for="name">Name</label>
+                <input
+                  type="text"
+                  name="name"
+                  id="name"
+                  class="formInput"
+                  required
+                />
+              </div>
+
+              <div class="formRow">
+                <label for="email">Email</label>
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  class="formInput"
+                  required
+                />
+              </div>
+
+              <div class="formRow">
+                <label for="message">Message</label>
+                <textarea
+                  id="message"
+                  name="message"
+                  class="formInput"
+                  cols="20"
+                  rows="5"
+                  required
+                ></textarea>
+              </div>
+
+              <button type="submit" class="btn">Send Message</button>
+            </form>
           </div>
         </div>
       </section>
