--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!-- BODY -->
   <body>
     <!-- NAV MENU Section -->
-    <header>
+    <header id="header">
       <div class="wrapper grid header__grid">
         <a href="./index.html"
           ><img
@@ -55,9 +55,9 @@
         /></a>
         <nav class="navbar">
           <ul class="navbar__list">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="./index.html#contact">Contact</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#project">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -82,7 +82,7 @@
       <!-- <hr /> -->
 
       <!-- About me -->
-      <section class="wrapper">
+      <section class="wrapper" id="about">
         <div class="title">
           <div class="title--style"></div>
           <h3>About</h3>
@@ -167,13 +167,15 @@
           </div>
           <div class="about__des">
             <p>
-              Hi I’m Rayan, thank you for stopping by! I am a dedicated
-              front-end developer with a passion for crafting clean and
-              accessible web applications. I have a multi-disciplinary approach
-              to work. Leveraging my previous background in design and project
-              management, I am committed to producing robust and elegant code
-              that effectively translates complex business concepts into
-              tangible and achievable objectives.
+              <span
+                >Hi I'm Rayan, a Toronto based web developer with a passion for
+                crafting clean and accessible web applications.</span
+              >
+              I have a multi-disciplinary approach to work. Leveraging my
+              previous background in design and project management, I am
+              committed to producing robust and elegant code that effectively
+              translates complex business concepts into tangible and achievable
+              objectives.
             </p>
             <br />
 
@@ -189,7 +191,7 @@
 
       <!-- Project -->
 
-      <section class="wrapper">
+      <section class="wrapper" id="project">
         <div class="title">
           <div class="title--style"></div>
           <h3>Projects</h3>
@@ -244,7 +246,7 @@
             <a href="">Live Site</a>
             <a href="">View Code</a>
           </div>
-          <div class="project__imageContainer">
+          <div class="project__imageContainer project__two">
             <img
               src="./assets/project/organic.png"
               alt="screenshot of the organic homepage"
@@ -296,7 +298,7 @@
             <a href="">Live Site</a>
             <a href="">View Code</a>
           </div>
-          <div class="project__imageContainer">
+          <div class="project__imageContainer project__four">
             <img
               src="./assets/project/organic.png"
               alt="screenshot of the organic homepage"
@@ -314,7 +316,10 @@
         <div class="grid contact__grid">
           <div class="contact__text">
             <p class="contact--header">Email</p>
-            <p class="contact--info">rayanmishra7@gmail.com</p>
+            <a href="mailto:rayanmishra7@gmail.com" class="contact--info"
+              >rayanmishra7@gmail.com</a
+            >
+            <!-- <p class="contact--info">rayanmishra7@gmail.com</p> -->
             <p class="contact--header">Find me on</p>
             <ul class="contact__socials">
               <li>
@@ -324,8 +329,9 @@
                 <a href="#"><i class="devicon-linkedin-plain"></i></a>
               </li>
             </ul>
+            <a href="#header" class="contact__top"><p>Back to Top ↑</p></a>
           </div>
-          <div class="contact_form">
+          <div class="contact__form">
             <!-- <form>
 
               <label for="name">Name</label>
@@ -383,4 +389,12 @@
       </section>
     </main>
   </body>
+
+  <!-- Footer -->
+  <footer>
+    <hr />
+    <div class="footer__text">
+      <p>Ⓒ2023 - Developed by Rayan Mishra</p>
+    </div>
+  </footer>
 </html>
