--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
+        <div class="nav--burger"><ion-icon name="menu-outline"></ion-icon></div>
       </div>
     </header>
 
@@ -71,15 +72,14 @@
           <p>Front End</p>
           <p>Web Developer</p>
           <p class="hero__tag">
-            I strive to produce robust and scalable code that translates complex
-            business goals into feasible and measurable objectives.
+            I am a Toronto based programmer with a passion for crafting clean
+            and accessible web applications.
           </p>
         </div>
         <div class="hero__imgContainer">
-          <img src="/assets/profile.png" alt="profil picture" />
+          <img src="/assets/profile.png" alt="profile picture" />
         </div>
       </section>
-      <!-- <hr /> -->
 
       <!-- About me -->
       <section class="wrapper" id="about">
@@ -167,15 +167,15 @@
           </div>
           <div class="about__des">
             <p>
-              <span
-                >Hi I'm Rayan, a Toronto based web developer with a passion for
-                crafting clean and accessible web applications.</span
-              >
-              I have a multi-disciplinary approach to work. Leveraging my
-              previous background in design and project management, I am
-              committed to producing robust and elegant code that effectively
-              translates complex business concepts into tangible and achievable
-              objectives.
+              <!--Add grod and flex box-->
+              I strive to produce robust and scalable code that translates
+              complex business goals into feasible and measurable objectives. I
+              have a multi-disciplinary approach to work. Leveraging my previous
+              background in design and project management, I am committed to
+              producing robust and elegant code that effectively translates
+              complex business concepts into tangible and achievable objectives.
+              I have worked across cultures and time zones managing teams that
+              are diverse and innovative.
             </p>
             <br />
 
