--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       <section class="wrapper grid hero__grid">
         <div class="hero__textContainer">
           <h1>Hello, I'm Rayan</h1>
-          <p>Front End</p>
-          <p>Web Developer</p>
+          <p>FrontEnd</p>
+          <p>Developer</p>
           <p class="hero__tag">
             I am a Toronto based programmer with a passion for crafting clean
             and accessible web applications.
@@ -168,14 +168,14 @@
           <div class="about__des">
             <p>
               <!--Add grod and flex box-->
-              I strive to produce robust and scalable code that translates
-              complex business goals into feasible and measurable objectives. I
-              have a multi-disciplinary approach to work. Leveraging my previous
-              background in design and project management, I am committed to
-              producing robust and elegant code that effectively translates
-              complex business concepts into tangible and achievable objectives.
-              I have worked across cultures and time zones managing teams that
-              are diverse and innovative.
+              I have a multi-disciplinary approach to work. Leveraging my
+              previous background in design and project management, I am
+              committed to producing robust and elegant code that effectively
+              translates complex business concepts into feasible and measurable
+              objectives.I have worked across cultures and time zones managing
+              teams that are diverse and innovative. My work ethic is
+              characterized by hard work, reliability, creativity, and a love
+              for problem-solving.
             </p>
             <br />
 
@@ -221,9 +221,9 @@
               search and filter, scroll effects using Intersection Observation
               API, image carousel gallery and is fully responsive down to 320px.
             </p>
-
-            <a href="">Live Site</a>
-            <a href="">View Code</a>
+            <div class="project__link">
+              <a href="">Live Site</a> <a href="">View Code</a>
+            </div>
           </div>
           <!-- 2nd -->
           <div class="project__text">
@@ -243,8 +243,9 @@
               API, image carousel gallery and is fully responsive down to 320px.
             </p>
 
-            <a href="">Live Site</a>
-            <a href="">View Code</a>
+            <div class="project__link">
+              <a href="">Live Site</a> <a href="">View Code</a>
+            </div>
           </div>
           <div class="project__imageContainer project__two">
             <img
@@ -275,8 +276,9 @@
               search and filter, scroll effects using Intersection Observation
               API, image carousel gallery and is fully responsive down to 320px.
             </p>
-            <a href="">Live Site</a>
-            <a href="">View Code</a>
+            <div class="project__link">
+              <a href="">Live Site</a> <a href="">View Code</a>
+            </div>
           </div>
           <!-- 4th -->
           <div class="project__text">
@@ -295,8 +297,9 @@
               search and filter, scroll effects using Intersection Observation
               API, image carousel gallery and is fully responsive down to 320px.
             </p>
-            <a href="">Live Site</a>
-            <a href="">View Code</a>
+            <div class="project__link">
+              <a href="">Live Site</a> <a href="">View Code</a>
+            </div>
           </div>
           <div class="project__imageContainer project__four">
             <img
@@ -311,7 +314,8 @@
       <section class="wrapper" id="contact">
         <div class="title">
           <div class="title--style"></div>
-          <h3>Get in touch</h3>
+          <!-- <h3>Get in touch</h3> -->
+          <h3>Contact</h3>
         </div>
         <div class="grid contact__grid">
           <div class="contact__text">
