--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
       src="https://kit.fontawesome.com/d86d91a25d.js"
       crossorigin="anonymous"
     ></script>
+
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png" />
     <!-- load after Html -->
     <script defer src="./script/script.js"></script>
 
@@ -52,7 +54,7 @@
         <a href="./index.html"
           ><img
             class="header__logo"
-            src="./assets/Logo-01.png"
+            src="./assets/logo-60x60.png"
             alt="R and M in logo"
         /></a>
         <nav class="navbar">
@@ -62,7 +64,7 @@
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
-        <!-- <div class="nav--burger"><ion-icon name="menu-outline"></ion-icon></div> -->
+
         <div class="nav--burger">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -199,6 +201,14 @@
               ideas by bringing my treasure trove of experience, expertise, and
               dedication to the table.
             </p>
+            <br />
+            <a
+              class="about__resume"
+              href="./assets/rayanResume.pdf"
+              download-class="button"
+              target="_blank"
+              >Download Resume</a
+            >
           </div>
         </div>
       </section>
