--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         </div>
         <nav>
           <ul class="navbar__hamburger">
-            <li><a href="#about">About</a></li>
-            <li><a href="#project">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="hamburger__link"><a href="#about">About</a></li>
+            <li class="hamburger__link"><a href="#project">Projects</a></li>
+            <li class="hamburger__link"><a href="#contact">Contact</a></li>
           </ul>
         </nav>
       </div>
@@ -373,7 +373,7 @@
             <a href="mailto:rayanmishra7@gmail.com" class="contact--info"
               >rayanmishra7@gmail.com</a
             >
-            <!-- <p class="contact--info">rayanmishra7@gmail.com</p> -->
+
             <p class="contact--header">Find me on</p>
             <ul class="contact__socials">
               <li>
@@ -386,38 +386,6 @@
             <a href="#header" class="contact__top"><p>Back to Top ↑</p></a>
           </div>
           <div class="contact__form">
-            <!-- <form>
-
-              <label for="name">Name</label>
-              <input
-                type="text"
-                name="name"
-                id="name"
-                class="formInput"
-                required
-              />
-
-              <label for="email">Email</label>
-              <input
-                type="email"
-                name="email"
-                id="email"
-                class="formInput"
-                required
-              />
-
-              <label for="message">Message</label>
-              <textarea
-                id="message"
-                name="message"
-                class="formInput"
-                cols="20"
-                rows="5"
-                required
-              ></textarea>
-
-              <button type="submit" class="btn">Send Message</button>
-            </form> -->
             <form
               name="contact"
               method="POST"
