--- a/index.html
+++ b/index.html
@@ -383,7 +383,9 @@
                 <a href="#"><i class="devicon-linkedin-plain"></i></a>
               </li>
             </ul>
-            <a href="#header" class="contact__top"><p>Back to Top ↑</p></a>
+            <a href="#main--section" class="contact__top"
+              ><p>Back to Top ↑</p></a
+            >
           </div>
           <div class="contact__form">
             <form
