expanded the projects section

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <br />
             <a
               class="about__resume"
-              href="./assets/rayanResume.pdf"
+              href="./assets/RayanMishraResume.pdf"
               download-class="button"
               target="_blank"
               >Download Resume</a
@@ -272,88 +272,99 @@
               API, image carousel gallery and is fully responsive down to 320px.
             </p>
             <div class="project__link">
-              <a href="">Live Site</a> <a href="">View Code</a>
+              <a href="https://oraganic-123.netlify.app/">Live Site</a>
+              <a href="https://github.com/rayanmishra/rayanMishraProject-1"
+                >View Code</a
+              >
             </div>
           </div>
           <!-- 2nd -->
           <div class="project__text">
-            <h5>Organic</h5>
+            <h5>Chat App</h5>
 
             <ul class="tool--list">
-              <li>HTML</li>
-              <li>SASS</li>
+              <li>React</li>
               <li>Firebase</li>
               <li>JavaScript</li>
             </ul>
 
             <p>
-              Organic is a multi-page e-commerce site with a fully functional
-              shopping cart connected to a real-time database, advanced product
-              search and filter, scroll effects using Intersection Observation
-              API, image carousel gallery and is fully responsive down to 320px.
+              A Chat Application that facilitates seamless communication among
+              its users through the exchange of messages within a dedicated
+              chatroom. The app comes with an option for Google login as well as
+              an anonymous login option. Users can send and receive messages in
+              real-time. There is also an option to edit sent messages.
             </p>
 
             <div class="project__link">
-              <a href="">Live Site</a> <a href="">View Code</a>
+              <a href="https://chat-app-rayan.netlify.app/">Live Site</a>
+              <a href="https://github.com/rayanmishra/rayanMishraProject-3"
+                >View Code</a
+              >
             </div>
           </div>
           <div class="project__imageContainer project__two">
             <img
-              src="./assets/project/organic.png"
+              src="./assets/project/chatapp.png"
               alt="screenshot of the organic homepage"
             />
           </div>
           <!-- 3rd -->
           <div class="project__imageContainer">
             <img
-              src="./assets/project/organic.png"
+              src="./assets/project/trivia.png"
               alt="screenshot of the organic homepage"
             />
           </div>
           <div class="project__text">
-            <h5>Organic</h5>
+            <h5>Robo Trivia App</h5>
 
             <ul class="tool--list">
-              <li>HTML</li>
-              <li>SASS</li>
+              <li>React</li>
               <li>Firebase</li>
               <li>JavaScript</li>
             </ul>
 
             <p>
-              Organic is a multi-page e-commerce site with a fully functional
-              shopping cart connected to a real-time database, advanced product
-              search and filter, scroll effects using Intersection Observation
-              API, image carousel gallery and is fully responsive down to 320px.
+              A Multiplayer trivia game app with real-time gameplay, interactive
+              questions and leaderboards for competitive knowledge challenges
+              and fun! In this group project, my responsibilities included:<br />
+              1. Setting up email and anonymous login authentication for the
+              players.<br />
+              2. Creating a seamless routing experience using React Router.<br />
+              3. Creating a persistent data flow by storing every game session,
+              including details like API-fetched questions and answers, player
+              information, and their scores, in Firebase.<br />
             </p>
             <div class="project__link">
-              <a href="">Live Site</a> <a href="">View Code</a>
+              <a href="https://robo-trivia-app.netlify.app/">Live Site</a>
+              <a href="https://github.com/RoboTriviaProject/RoboTrivia"
+                >View Code</a
+              >
             </div>
           </div>
           <!-- 4th -->
           <div class="project__text">
-            <h5>Organic</h5>
+            <h5>Tasty</h5>
 
             <ul class="tool--list">
               <li>HTML</li>
-              <li>SASS</li>
-              <li>Firebase</li>
-              <li>JavaScript</li>
+              <li>CSS</li>
             </ul>
 
             <p>
-              Organic is a multi-page e-commerce site with a fully functional
-              shopping cart connected to a real-time database, advanced product
-              search and filter, scroll effects using Intersection Observation
-              API, image carousel gallery and is fully responsive down to 320px.
+              A fully responsive multi-page PSD conversion webpage made using
+              given mockup design files. This site is fully responsive across
+              all viewports.
             </p>
             <div class="project__link">
-              <a href="">Live Site</a> <a href="">View Code</a>
+              <a href="https://tasty-practise.netlify.app/">Live Site</a>
+              <a href="https://github.com/rayanmishra/Tasty">View Code</a>
             </div>
           </div>
           <div class="project__imageContainer project__four">
             <img
-              src="./assets/project/organic.png"
+              src="./assets/project/tasty.png"
               alt="screenshot of the organic homepage"
             />
           </div>
